@@ -114,6 +114,7 @@ enum {
   EXPAND_FINDFUNC,
   EXPAND_FILETYPECMD,
   EXPAND_PATTERN_IN_BUF,
+  EXPAND_RETAB,
   EXPAND_CHECKHEALTH,
   EXPAND_LUA,
 };
