@@ -3901,6 +3901,7 @@ M.funcs = {
       messages	|:messages| suboptions
       option		options
       packadd		optional package |pack-add| names
+      retab		|:retab| suboptions
       runtime		|:runtime| completion
       scriptnames	sourced script names |:scriptnames|
       shellcmd	Shell command
